--- a/src/Components/Main/Introduction.module.scss
+++ b/src/Components/Main/Introduction.module.scss
@@ -1,4 +1,4 @@
-main .website-introduction {
+main .websiteIntroduction {
   background-image: url('../../assets/hero-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -7,12 +7,12 @@ main .website-introduction {
   padding-top: 230px;
 }
 
-main .website-introduction .website-name {
+main .websiteIntroduction .websiteName {
   color: var(--yellow);
   font-size: 26px;
 }
 
-main .website-introduction h2 {
+main .websiteIntroduction h2 {
   color: var(--white);
   font-size: 57px;
   width: 600px;
@@ -20,30 +20,30 @@ main .website-introduction h2 {
 }
 
 @media (max-width: 1200px) {
-  main .website-introduction h2 {
+  main .websiteIntroduction h2 {
     width: 450px;
     font-size: 40px;
   }
 }
 
 @media (max-width: 992px) {
-  main .website-introduction h2 {
+  main .websiteIntroduction h2 {
     width: 100%;
   }
 }
 
 @media (max-width: 376px) {
-  main .website-introduction h2 {
+  main .websiteIntroduction h2 {
     font-size: 30px;
     margin-top: 0;
   }
 }
 
-main .website-introduction h2 span {
+main .websiteIntroduction h2 span {
   color: var(--yellow);
 }
 
-main .website-introduction .box {
+main .websiteIntroduction .box {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -51,7 +51,7 @@ main .website-introduction .box {
   margin: 30px 0;
 }
 
-main .website-introduction .box .pg {
+main .websiteIntroduction .box .pg {
   border: solid 2px var(--white);
   background-color: var(--white);
   color: var(--black);
@@ -60,7 +60,7 @@ main .website-introduction .box .pg {
   padding: 2px 8px;
 }
 
-main .website-introduction .box .resolution {
+main .websiteIntroduction .box .resolution {
   border: solid 2px var(--white);
   background-color: transparent;
   color: var(--white);
@@ -69,7 +69,7 @@ main .website-introduction .box .resolution {
   padding: 2px 10px;
 }
 
-main .website-introduction .box .content {
+main .websiteIntroduction .box .content {
   display: flex;
   align-items: center;
   gap: 30px;
@@ -80,19 +80,19 @@ main .website-introduction .box .content {
 }
 
 @media (max-width: 768px) {
-  main .website-introduction .box .content {
+  main .websiteIntroduction .box .content {
     flex-direction: column;
     gap: 4px;
   }
 }
 
-main .website-introduction .box .content div {
+main .websiteIntroduction .box .content div {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-main .website-introduction button {
+main .websiteIntroduction button {
   padding-top: 14px;
   padding-bottom: 14px;
 }
