--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "../../Sass/mixins";
+
 header {
   background-color: transparent;
   position: absolute;
@@ -5,11 +7,7 @@ header {
   top: 0;
   width: 100%;
   padding: 40px 0;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
+  @include prefix(transition, all .5s);
   z-index: 4;
 }
 
