--- a/src/Components/Main/Movie.module.scss
+++ b/src/Components/Main/Movie.module.scss
@@ -1,4 +1,6 @@
-main .upcoming-movies .movies-list {
+@import "../../Sass/mixins";
+
+main .upcomingMovies .moviesList {
   display: flex;
   overflow-x: auto;
   scroll-snap-type: inline mandatory;
@@ -9,133 +11,109 @@ main .upcoming-movies .movies-list {
 }
 
 @media (max-width: 1500px) {
-  main .upcoming-movies .movies-list {
+  main .upcomingMovies .moviesList {
     width: 100%;
   }
 }
 
 @media (max-width: 1200px) {
-  main .upcoming-movies .movies-list {
+  main .upcomingMovies .moviesList {
     width: 98.5%;
   }
 }
 
 @media (max-width: 992px) {
-  main .upcoming-movies .movies-list {
+  main .upcomingMovies .moviesList {
     width: 79%;
   }
 }
 
 @media (max-width: 768px) {
-  main .upcoming-movies .movies-list {
+  main .upcomingMovies .moviesList {
     width: 100%;
   }
 }
 
-main .upcoming-movies .movies-list::-webkit-scrollbar {
+main .upcomingMovies .moviesList::-webkit-scrollbar {
   height: 8px;
 }
 
-main .upcoming-movies .movies-list::-webkit-scrollbar-track {
+main .upcomingMovies .moviesList::-webkit-scrollbar-track {
   background-color: transparent;
   box-shadow: 0 0 0 2px var(--yellow);
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  @include prefix(border-radius, 10px);
 }
 
-main .upcoming-movies .movies-list::-webkit-scrollbar-thumb {
+main .upcomingMovies .moviesList::-webkit-scrollbar-thumb {
   background-color: #e3dede;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  @include prefix(border-radius, 10px);
   box-shadow: inset 0 -1px 0 var(--black),
     inset 0 1px 0 var(--black);
 }
 
-main .upcoming-movies .movies-list .movie .img {
+main .upcomingMovies .moviesList .movie .img {
   user-select: none;
   cursor: pointer;
   position: relative;
   max-width: 304px;
   width: 304px;
   height: 435px;
+
+  img {
+    @include prefix(border-radius, 10px 10px 0 0);
+  }
 }
 
 @media (max-width: 1239px) {
-  main .upcoming-movies .movies-list .movie .img {
+  main .upcomingMovies .moviesList .movie .img {
     width: 320px;
   }
 }
 
 @media (max-width: 376px) {
-  main .upcoming-movies .movies-list .movie .img {
+  main .upcomingMovies .moviesList .movie .img {
     width: 338px;
   }
 }
 
-main .upcoming-movies .movies-list .movie .img::before {
+main .upcomingMovies .moviesList .movie .img::before {
   content: '';
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  border-radius: 10px 10px 0 0;
-  -webkit-border-radius: 10px 10px 0 0;
-  -moz-border-radius: 10px 10px 0 0;
-  -ms-border-radius: 10px 10px 0 0;
-  -o-border-radius: 10px 10px 0 0;
-  transition: background-color 0.3s;
-  -webkit-transition: background-color 0.3s;
-  -moz-transition: background-color 0.3s;
-  -ms-transition: background-color 0.3s;
-  -o-transition: background-color 0.3s;
+  @include prefix(border-radius, 10px 10px 0 0);
+  @include prefix(transition, background-color .3s);
 }
 
-main .upcoming-movies .movies-list .movie .img:hover::before {
+main .upcomingMovies .moviesList .movie .img:hover::before {
   background-color: rgba(255, 255, 255, 0.037);
 }
 
-main .upcoming-movies .movies-list .movie .img img {
-  border-radius: 10px 10px 0 0;
-  -webkit-border-radius: 10px 10px 0 0;
-  -moz-border-radius: 10px 10px 0 0;
-  -ms-border-radius: 10px 10px 0 0;
-  -o-border-radius: 10px 10px 0 0;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-main .upcoming-movies .movies-list .movie .info {
+main .upcomingMovies .moviesList .movie .info {
   margin-top: 20px;
 }
 
-main .upcoming-movies .movies-list .movie .info div {
+main .upcomingMovies .moviesList .movie .info div {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-main .upcoming-movies .movies-list .movie .info .name-movie {
+main .upcomingMovies .moviesList .movie .info .nameMovie {
   color: var(--white);
   width: 200px;
   height: 60px;
 }
 
-main .upcoming-movies .movies-list .movie .info .release-year {
+main .upcomingMovies .moviesList .movie .info .releaseYear {
   color: var(--yellow);
   font-size: 14px;
   font-weight: 500;
 }
 
-main .upcoming-movies .movies-list .movie .info .resolution {
+main .upcomingMovies .moviesList .movie .info .resolution {
   color: var(--yellow);
   border: solid 2px var(--white);
   font-size: 12px;
@@ -143,21 +121,21 @@ main .upcoming-movies .movies-list .movie .info .resolution {
   padding: 1px 10px;
 }
 
-main .upcoming-movies .movies-list .movie .info .time-and-rate {
+main .upcomingMovies .moviesList .movie .info .timeAndRate {
   display: flex;
   align-items: center;
   gap: 16px;
 }
 
-main .upcoming-movies .movies-list .movie .info .time-and-rate .time,
-main .upcoming-movies .movies-list .movie .info .time-and-rate .rate {
+main .upcomingMovies .moviesList .movie .info .timeAndRate .time,
+main .upcomingMovies .moviesList .movie .info .timeAndRate .rate {
   color: #dadada;
   font-size: 12px;
   font-weight: 500;
 }
 
-main .upcoming-movies .movies-list .movie .info .time-and-rate .time i,
-main .upcoming-movies .movies-list .movie .info .time-and-rate .rate i {
+main .upcomingMovies .moviesList .movie .info .timeAndRate .time i,
+main .upcomingMovies .moviesList .movie .info .timeAndRate .rate i {
   color: var(--yellow);
   font-size: 12px;
 }
