--- a/src/Components/Header/Tools.module.scss
+++ b/src/Components/Header/Tools.module.scss
@@ -96,6 +96,7 @@
   font-size: 14px;
   padding: 0 10px;
   @include prefix(transition, color .3s);
+  display: none;
 
   &:hover {
     color: var(--yellow);
