--- a/src/Components/Main/UpcomingMovies.module.scss
+++ b/src/Components/Main/UpcomingMovies.module.scss
@@ -7,6 +7,57 @@ main .upcomingMovies {
   padding: 90px 0 120px 0;
 }
 
+.upcomingMovies .moviesList {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  gap: 30px;
+  padding-bottom: 25px;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+@media (max-width: 1500px) {
+  .upcomingMovies .moviesList {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .upcomingMovies .moviesList {
+    width: 98.5%;
+  }
+}
+
+@media (max-width: 992px) {
+  .upcomingMovies .moviesList {
+    width: 79%;
+  }
+}
+
+@media (max-width: 768px) {
+  .upcomingMovies .moviesList {
+    width: 100%;
+  }
+}
+
+.moviesList::-webkit-scrollbar {
+  height: 8px;
+}
+
+.moviesList::-webkit-scrollbar-track {
+  background-color: transparent;
+  box-shadow: 0 0 0 2px var(--yellow);
+  @include prefix(border-radius, 10px);
+}
+
+.moviesList::-webkit-scrollbar-thumb {
+  background-color: #e3dede;
+  @include prefix(border-radius, 10px);
+  box-shadow: inset 0 -1px 0 var(--black),
+    inset 0 1px 0 var(--black);
+}
+
 main .upcomingMovies .moviesContainer {
   width: 86%;
   margin: 0 auto;
